<resources>
    <string name="app_name">RecipesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorite</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="error_timeout">Timeout</string>
    <string name="error_api_key_limit">API Key Limited.</string>
    <string name="error_recipes_not_found">Recipes not found.</string>
    <string name="error_internet_connection">No Internet Connection</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet_Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="recipe_image">recipe image</string>
    <string name="recipe_time">recipe time</string>
    <string name="recipes_likes">recipes likes</string>
    <string name="image_for_check_or_uncheck">image for check or uncheck</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="description">Description</string>
    <string name="default_value">100</string>
    <string name="grams">Grams</string>
    <string name="consistency">Consistency</string>
    <string name="step">Step:</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_instruction_found">No Instruction Found</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="delete_dialog_message">Are you sure you want to delete the entire list of favorite recipes?</string>
    <string name="no">No</string>
    <string name="delete_all">Delete All</string>
    <string name="add_to_grocery">Add To Grocery</string>
    <string name="grocery_list">Grocery List</string>
    <string name="original">Original</string>
    <string name="grocery">Grocery</string>

</resources>