<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragmets.overview.OverviewFragment">

    <ImageView
        android:id="@+id/main_image_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_image_view"
        app:layout_constraintEnd_toEndOf="@+id/main_image_view"
        app:layout_constraintStart_toStartOf="@+id/main_image_view"
        app:layout_constraintTop_toTopOf="@+id/main_image_view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/default_value" />

    <ImageView
        android:id="@+id/time_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recipe_time"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/time_text_view"
        app:layout_constraintEnd_toEndOf="@+id/time_text_view"
        app:layout_constraintStart_toStartOf="@+id/time_text_view"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/likes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_text_view"
        app:layout_constraintEnd_toStartOf="@+id/time_text_view"
        android:text="@string/default_value" />

    <ImageView
        android:id="@+id/likes_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recipes_likes"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/likes_text_view"
        app:layout_constraintEnd_toEndOf="@+id/likes_text_view"
        app:layout_constraintStart_toStartOf="@+id/likes_text_view"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title_details_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image_view"
        tools:text="@tools:sample/lorem" />

    <ImageView
        android:id="@+id/vegetarian_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_for_check_or_uncheck"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@+id/title_details_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_details_text_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegetarian_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_image_view"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_image_view"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_image_view" />

    <ImageView
        android:id="@+id/vegan_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_for_check_or_uncheck"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@+id/vegetarian_image_view"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_image_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegan_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_image_view"
        app:layout_constraintStart_toEndOf="@+id/vegan_image_view"
        app:layout_constraintTop_toTopOf="@+id/vegan_image_view" />

    <ImageView
        android:id="@+id/dairy_free_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:contentDescription="@string/image_for_check_or_uncheck"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_text_view"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_text_view"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_text_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/dairy_free_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_image_view"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_image_view"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_image_view" />

    <ImageView
        android:id="@+id/gluten_free_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_for_check_or_uncheck"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@+id/dairy_free_image_view"
        app:layout_constraintTop_toBottomOf="@+id/dairy_free_image_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/gluten_free_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_image_view"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_image_view"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_image_view" />

    <ImageView
        android:id="@+id/healthy_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:contentDescription="@string/image_for_check_or_uncheck"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_image_view"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_text_view"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_image_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/healthy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_image_view"
        app:layout_constraintStart_toEndOf="@+id/healthy_image_view"
        app:layout_constraintTop_toTopOf="@+id/healthy_image_view" />

    <ImageView
        android:id="@+id/cheap_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_for_check_or_uncheck"
        android:src="@drawable/ic_check_circle"
        app:layout_constraintStart_toStartOf="@+id/healthy_image_view"
        app:layout_constraintTop_toBottomOf="@+id/healthy_image_view"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/cheap_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/cheap_image_view"
        app:layout_constraintStart_toEndOf="@+id/cheap_image_view"
        app:layout_constraintTop_toTopOf="@+id/cheap_image_view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        android:textColor="@color/darkGray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/vegan_image_view"
        app:layout_constraintTop_toBottomOf="@+id/vegan_image_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="6dp"
                android:textSize="16sp"
                tools:text="@tools:sample/lorem/random"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>