<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightMediumGray"
    android:padding="8dp"
    tools:context=".ui.fragmets.dialogs.DeleteAllDialogFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_dialog_message"
                android:textColor="@color/darkGray"
                android:paddingVertical="24dp"
                android:paddingHorizontal="20dp"
                android:textSize="22sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/no_delete_recipes_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeColor="@color/darkGray"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:layout_marginStart="30dp"
                    android:text="@string/no"
                    android:textColor="@color/darkGray"
                    android:layout_width="100dp"
                    android:layout_height="50dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_all_recipes_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeColor="@color/red"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:layout_marginStart="80dp"
                    android:text="@string/delete_all"
                    android:textColor="@color/red"
                    android:layout_width="150dp"
                    android:layout_height="50dp" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>